# Faceveil

./: .gitignore  CMakeLists.txt  PLATFORM_SUPPORT_STATUS.md  README.en.md  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.txt  VIDEO_ROADMAP.md
.github/workflows/: ci.yml  release.yml
assets/: Redactly.icns  redactly.desktop
include/cloakframe/: VideoReviewDialog.hpp  VideoReviewTypes.hpp
include/faceveil/: ImageIo.hpp  PathUtil.hpp
include/redactly/: Detector.hpp  FaceDetection.hpp  ImageIo.hpp  ImageScanner.hpp  MainWindow.hpp  Mosaic.hpp  OnnxGraphPatch.hpp  OrderedParallel.hpp  OutputPlan.hpp  PathSafety.hpp  PathUtil.hpp  PlateDetector.hpp  ProcessorWorker.hpp  ReviewDialog.hpp  ReviewTypes.hpp  ScrfdFaceDetector.hpp  SettingsDialog.hpp  Tracking.hpp  UpdateChecker.hpp  VideoIo.hpp  VideoProcessor.hpp
release-notes/: v1.10.0.md  v1.10.2.md  v1.10.3.md  v1.11.0.md  v1.9.1.md
scripts/: notarize_macos.sh  package_linux.sh  package_macos.sh  package_windows.ps1
src/: CMakeLists.txt  ImageIo.cpp  ImageScanner.cpp  MainWindow.cpp  Mosaic.cpp  OnnxGraphPatch.cpp  OutputPlan.cpp  PlateDetector.cpp  ProcessorWorker.cpp  ReviewDialog.cpp  ScrfdFaceDetector.cpp  SettingsDialog.cpp  Theme.cpp  Tracking.cpp  UpdateChecker.cpp  VideoIo.cpp  VideoProcessor.cpp  VideoReviewDialog.cpp  VideoReviewTypes.cpp  main.cpp
tests/: test_core.cpp  test_parallel.cpp  test_tracking.cpp  test_video_io.cpp
tools/: inspect_model.cpp
translations/: cloakframe_ja.ts  cloakframe_ko.ts  cloakframe_zh_CN.ts  faceveil_ko.ts  redactly_ko.ts  redactly_zh_CN.ts
